CI: correction des tests GitHub Actions (X11 et Assets)
- Ajout de 'xvfb-run' devant ctest pour simuler un écran et éviter l'erreur 'Failed to open X11 display'
- Ajout de la copie du dossier 'assets' dans le dossier de build via CMake pour corriger l'erreur 'Failed to load font'"
- Ajout d'un compteur de fps dans Application::run() pour fermer la fenêtre automatiquement si --test est actif
- Permet à GitHub Actions et Valgrind de ne pas bloquer sur une boucle infinie"
- Fix memory leak de libGLX_mesa causé car valgrind trop strict

Signed-off-by: Sasha Marie te Rehorst <sasha.marieterehorst@gmail.com>

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -36,9 +36,10 @@ jobs:
 
     - name: Tests
       run: |
-        ctest --test-dir build --output-on-failure -V || true
-        EXE_PATH=$(find build -maxdepth 1 -type f -executable -not -name "cmake*" -not -name "ctest*" | head -n 1)
-        xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' valgrind --leak-check=full --error-exitcode=1 --quiet "$EXE_PATH"
+        xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' ctest --test-dir build --output-on-failure -V
+        cd build
+        EXE_PATH=$(find . -maxdepth 1 -type f -executable -not -name "cmake*" -not -name "ctest*" | head -n 1)
+        xvfb-run --auto-servernum --server-args='-screen 0 1024x768x24' valgrind --leak-check=full --error-exitcode=1 --quiet --suppressions=../valgrind.supp "$EXE_PATH" --test
 
   release:
     needs: debug-test
